--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "0.4.1",
-    "jshint": "2.3.0"
+    "grunt-contrib-jshint": "0.7.0"
   }
 }
